added table data and scripts for JS code

--- a/index.html
+++ b/index.html
@@ -80,11 +80,17 @@ Our final code for this section should be similar to what's displayed below.
                             <th>Comments</th>
                         </tr>
                     </thead>
+                    <tbody>
+                    </tbody>
                 </table>
             </div>
 
 
         </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
+    <script src="static/js/data.js"></script>
+    <script src="static/js/app.js"></script>
 </body>
 </html>
+
