--- a/Module/index.html
+++ b/Module/index.html
@@ -55,31 +55,12 @@ Our final code for this section should be similar to what's displayed below.
                 <form class="bg-dark">
                     <p>Filter Search</p>
                     <ul class="list-group bg-dark">
-
-                        <!-- Filter for Date -->
                         <li class="list-group-item bg-dark">
                             <label for="date">Enter Date</label>
                             <input type="text" placeholder="1/10/2010" id="datetime" />
                         </li>
-                        <!-- Filter for city -->
                         <li class="list-group-item bg-dark">
-                            <label for="date">Enter City</label>
-                            <input type="text" placeholder="uxbridge" id="city" />
-                        </li>
-                        <!-- Filter for state -->
-                        <li class="list-group-item bg-dark">
-                            <label for="date">Enter State</label>
-                            <input type="text" placeholder="ca" id="state" />
-                        </li>
-                        <!-- Filter for country -->
-                        <li class="list-group-item bg-dark">
-                            <label for="date">Enter Country</label>
-                            <input type="text" placeholder="us" id="country" />
-                        </li>
-                        <!-- Filter for shape -->
-                        <li class="list-group-item bg-dark">
-                            <label for="date">Enter Shape</label>
-                            <input type="text" placeholder="triangle" id="shape" />
+                            <button id="filter-btn" type="button" class="btn btn-dark">Filter Table</button>
                         </li>
                     </ul>
                 </form>
